# ijo

./: .gitignore  .gitmodules  BeefProj.toml  BeefSpace.toml  CMakeLists.txt  Notes.md  README.md  Todo  Todo.md  build.sh  compile_commands.json  ijo.nimble  xmake.lua
Applications/ijo.cli/: BeefProj.toml
Samples/: add.ijo  hello.ijo  misc.ijo
Sources/ijo/: BeefProj.toml
Tools/GenerateAst/: generate_ast.py
book/: 00.ijo.md  01.Variables.md  02.Control_Flow.md
design/: generate_ast.py  grammar.ebnf
doc/: 00.ijo.md
docs/: cheatsheet.ijo
example/: elapsed.ijo  main.ijo
examples/: conditionals.ijo  const.ijo  elapsed.ijo  for.ijo  hello.ijo  if.ijo  string.ijo  userFunction.ijo  var.ijo
ijolib/: xmake.lua
ijolib/include/: ijoChunk.h  ijoCommon.h  ijoCompiler.h  ijoDebug.h  ijoLog.h  ijoMemory.h  ijoObj.h  ijoScanner.h  ijoTable.h  ijoToken.h  ijoVM.h  ijoValue.h
ijolib/src/: ijoChunk.c  ijoCompiler.c  ijoDebug.c  ijoLog.c  ijoMemory.c  ijoObj.c  ijoScanner.c  ijoTable.c  ijoVM.c  ijoValue.c
ijolib/zig/: chunk.zig  scanner.zig  token.zig  value.zig
include/: chunk.h  common.h  compiler.h  debug.h  ijoChunk.h  ijoDebug.h  ijoMemory.h  ijoObj.h  ijoToken.h  ijoVM.h  log.h  scanner.h  table.h  token.h  value.h
include/gc/: ijoNaiveGC.h  naiveGC.h
playground/: playground.rgl  xmake.lua
playground/include/: disassembler.h
src/: AST.bf  AstPrinter.bf  ByteCodeExecutor.bf  ByteCodeGenerator.bf  ByteCodePrinter.bf  Chunk.bf  Disassembler.bf  Environment.bf  Errors.bf  Exit.bf  Expr.bf  Extensions.bf  Interpreter.bf  Lox.bf  Mixins.bf  OpCode.bf  OpCodes.bf  ParseError.bf  ParseRule.bf  Parser.bf  Precedence.bf  Program.bf  RuntimeError.bf  Scanner.bf  Scope.bf  ScopeError.bf  Stmt.bf  SysExit.bf  Token.bf  TokenType.bf  Unwrap.bf  ValueArray.bf  VirtualMachine.bf  Visitor.bf  chunk.c  compiler.c  debug.c  ijo.nim  ijoCallable.bf  ijoCompiler.bf  (+23 more)
tests/: acutest.h  test1.nim  test_eval.nim  test_ijo.c  test_ijoChunk.h  test_ijoVM.h  test_ijoValue_Bool.nim  test_ijoValue_Float.nim  test_ijoValue_Int.nim  test_ijoValue_String.nim  test_ijoValue_Undefined.nim  xmake.lua
vm/: xmake.lua
vm/src/: main.c
(+77 files in other folders)
